--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
             <version>4.6.1</version> <!-- Utilisez la dernière version stable -->
             <scope>test</scope>
         </dependency>
-
+            
     </dependencies>
 
     <build>
@@ -68,44 +68,29 @@
                     </excludes>
                 </configuration>
             </plugin>
-                  <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <phase>test-compile</phase>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
-                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                            <formats>
-                                <format>XML</format> <!-- Génération du rapport XML pour SonarQube -->
-                                <format>HTML</format> <!-- Génération optionnelle du rapport HTML pour consultation locale -->
-                            </formats>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                 <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.8</version> <!-- Utilisez la version la plus récente -->
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>test</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 
         </plugins>
     </build>
-          <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>4.6.1</version> <!-- Utilisez la dernière version stable -->
-            <scope>test</scope>
-        </dependency>
+          
 <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
